# area-52-workshops

./: .gitignore  README.md
workshop-number-1_12-06-2022/: step_through_jumpring.rs
workshop-number-1_12-06-2022/hello-world/src/: main.rs
workshop-number-2_01-17-2023/code/exploring-types/: Cargo.toml
workshop-number-2_01-17-2023/code/exploring-types/src/: main.rs
workshop-number-2_01-17-2023/code/fibonacci-recur_fn/: Cargo.toml
workshop-number-2_01-17-2023/code/fibonacci-recur_fn/src/: main.rs
workshop-number-2_01-17-2023/code/fibonacci-recursion/: Cargo.toml
workshop-number-2_01-17-2023/code/fibonacci-recursion/src/: main.rs
workshop-number-2_03-03-2023/code/: passport-token-tests.rs
workshop-number-3_03-03-2023/code/: passport-token-tests.rs  portal-tests.rs
workshop-number-3_03-03-2023/code/debug-responses/: passport-query-response.txt  portal-failed-mint-resp.txt  portal-mint-resp.txt
workshop-number-4_03-17-2023/code/ibc-counter/src/: contract.rs
