[package]
name = "fibonacci-recur_fn"
version = "0.1.0"
edition = "2021"
description = "Prints fibonacci numbers using recursion via the recur_fn package"
authors = ["Drew Taylor <drew.taylor@philabs.xyz>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
recur-fn = "2.2.0"