[package]
name = "fibonacci-recursion"
version = "0.1.0"
edition = "2021"
description = "Prints fibonacci numbers using a user defined recursive method"
authors = ["Drew Taylor <drew.taylor@philabs.xyz>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
